--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
-Flask
-Flask-SocketIO
+Flask==1.1.2
+Flask-SocketIO==4.2.1
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+Werkzeug==0.16.0
+click==7.1.1
+itsdangerous==1.1.0
+pip==20.0.2
+python-engineio==3.12.1
+python-socketio==4.5.1
+setuptools===41.2.0
+six==1.14.0
+
+
